--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=My , initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Layout 3</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    My name is Lindsey!!
-
+    <div class="container">
+    <div class="row">
+            <div class="box-wrapper">
+                <div class="box box-small"></div>
+                <div class="box box-small"></div>
+                <div class="tiny-wrapper">
+                    <div class="box box-tiny"></div>
+                    <div class="box box-tiny"></div>
+                    <div class="box box-tiny"></div>
+                </div>
+            </div>
+            <div class="box box-large"></div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
